[package]
name = "ws-repeater"
version = "0.1.0"
authors = ["Scott Hutton <schutton@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
clap = "2.33.0"
error-chain = "0.12.2"
futures = "0.3.4"
futures-util = "0.3.4"
http = "0.2.1"
log = "0.4.8"
nix = "0.17.0"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.20", features = ["full"] }
tokio-tungstenite = { version = "0.10.1", features = ["connect", "stream", "tls"] }
tungstenite = "0.10.1"
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
tempfile = "3.1.0"
